# PathFinder

./: CMakeLists.txt  README.md
cmake/: ilcsoft_default_settings.cmake
doc/: release.notes
examples/: BasicHitExample.cpp  CMakeLists.txt  FinderParameterExample.cpp  README  Steering_TrackFindingExample.txt  Steering_TrackGenerationExample.txt  TestExample.cpp  TrackFindingExample.cpp  TrackGenerationExample.cpp
include/: DistanceHitTrackCalculator.h  FinderParameter.h  HoughMap.h  HoughMap2DCircleint.h  HoughMap2Dint.h  HoughMap2DintIntersectionMethod.h  HoughMapMaximum.h  HoughMapMaximumCandidateFinder.h  HoughMaximum2D.h  HoughMaximum3D.h  HoughSpaceAnalyzer.h  HoughSpaceBinning.h  HoughSpacePoint.h  HoughTrafoTrackFinder.h  RootFileWriter.h  SZFit.h  SimpleFit.h  TGDetectorType.h  TGEventType.h  TGTrackParameterLimits.h  ThetaToPhiConverter.h  TrackFinderTrack.h  TrackGenerator.h  TrackParameter.h  TrackParameterFull.h  TrackParameterSZ.h  TrackParameterXY.h  XYCircularFit.h  XYLinearFit.h  basicHit.h  candidateHit.h  candidateHitCombination.h  newHoughMap3Dint.h  newHoughMap3DintVertex.h  triple.h
scripts/: Make2DHistosFromRootFileWriterRootTree.C
src/: DistanceHitTrackCalculator.cc  FinderParameter.cc  HoughMap2DCircleint.cc  HoughMap2Dint.cc  HoughMap2DintIntersectionMethod.cc  HoughMapMaximumCandidateFinder.cc  HoughMaximum2D.cc  HoughMaximum3D.cc  HoughSpaceAnalyzer.cc  HoughSpaceBinning.cc  HoughSpacePoint.cc  HoughTrafoTrackFinder.cc  RootFileWriter.cc  (+14 more)
tools/: CMakeLists.txt  EfficiencyTest.cpp  HoughSpaceComputingTimeTest.cpp  HoughSpaceTest.cpp
